--- a/CMDAwesomeButton.xcodeproj/xcshareddata/xcschemes/CMDAwesomeButton.xcscheme
+++ b/CMDAwesomeButton.xcodeproj/xcshareddata/xcschemes/CMDAwesomeButton.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0630"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,36 +15,39 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3BEEAD191B40DB2E0056E0E4"
-               BuildableName = "CMDAwesomeButton.framework"
-               BlueprintName = "CMDAwesomeButton"
+               BuildableName = "CMDAwesomeButton iOS.framework"
+               BlueprintName = "CMDAwesomeButton iOS"
                ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3BEEAD191B40DB2E0056E0E4"
-            BuildableName = "CMDAwesomeButton.framework"
-            BlueprintName = "CMDAwesomeButton"
+            BuildableName = "CMDAwesomeButton iOS.framework"
+            BlueprintName = "CMDAwesomeButton iOS"
             ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -52,17 +55,17 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3BEEAD191B40DB2E0056E0E4"
-            BuildableName = "CMDAwesomeButton.framework"
-            BlueprintName = "CMDAwesomeButton"
+            BuildableName = "CMDAwesomeButton iOS.framework"
+            BlueprintName = "CMDAwesomeButton iOS"
             ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
