--- a/CMDAwesomeButton.xcodeproj/xcshareddata/xcschemes/CMDAwesomeButton tvOS.xcscheme
+++ b/CMDAwesomeButton.xcodeproj/xcshareddata/xcschemes/CMDAwesomeButton tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3AECCDDC1BE296150020E58D"
-               BuildableName = "CMDAwesomeButton tvOS.framework"
+               BuildableName = "CMDAwesomeButton.framework"
                BlueprintName = "CMDAwesomeButton tvOS"
                ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3AECCDDC1BE296150020E58D"
-            BuildableName = "CMDAwesomeButton tvOS.framework"
+            BuildableName = "CMDAwesomeButton.framework"
             BlueprintName = "CMDAwesomeButton tvOS"
             ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3AECCDDC1BE296150020E58D"
-            BuildableName = "CMDAwesomeButton tvOS.framework"
+            BuildableName = "CMDAwesomeButton.framework"
             BlueprintName = "CMDAwesomeButton tvOS"
             ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3AECCDDC1BE296150020E58D"
-            BuildableName = "CMDAwesomeButton tvOS.framework"
+            BuildableName = "CMDAwesomeButton.framework"
             BlueprintName = "CMDAwesomeButton tvOS"
             ReferencedContainer = "container:CMDAwesomeButton.xcodeproj">
          </BuildableReference>
